--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "MIT"
     ],
     "require" : {
-        "php": ">=7.1",
+        "php": "^7.2|^8.0",
         "ext-mbstring": "*"
     },
     "require-dev": {
