--- a/composer.json
+++ b/composer.json
@@ -25,16 +25,17 @@
         "ext-mbstring": "*"
     },
     "require-dev": {
-      "phpunit/phpunit": "~7.0|~8.0"
+        "phpunit/phpunit": "^9.0|^8.0|^7.0",
+        "friendsofphp/php-cs-fixer": "^3.0|^2.0"
     },
     "autoload": {
-        "classmap": [
-          "src"
-        ]
+        "psr-4": {
+            "fab2s\\Utf8\\": "src"
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "fab2s\\Tests\\": "tests/"
+            "fab2s\\Utf8\\Tests\\": "tests/"
         }
     },
     "suggest": {
